# bonsai

./: Pipfile  README.rst  pyproject.toml
sentence_segmentator/: README.rst
src/bonsai/: version.py
src/bonsai/data_generator/: README.rst  __init__.py  fixer.py
src/bonsai/formal_normative_sentence_generator/: README.rst  __init__.py  formal_normative_sentence_generator_trainer.py  gpt_2.py
src/bonsai/formal_normative_sentence_generator/GPT2/: auto_model.py  auto_model_json_data.py
src/bonsai/formal_normative_sentence_generator/data/: MAY_11509.json  MUST_11509.json  NON_11509.json
src/bonsai/sentence_classifier/data/: labels.json
src/bonsai/sentence_generator/: README.rst  sentence_classifier_trainer.py
src/bonsai/sentence_generator/data/: sentences.json
src/bonsai/sentence_segmentator/: __init__.py  sentence_segmentator.py
tests/: test_bonsai.py  test_data_generator  test_sentence_classifier.py  test_sentence_segmentator.py
