[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonsai"
description = "An experimental AI tool for specification checking"
readme = "README.rst"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    { name = "Diego Hurtado", email = "ocelotl@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = [
    "spacy"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ocelotl/bonsai"

[tool.hatch.version]
path = "src/bonsai/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bonsai"]
